syntax = "proto3";

package comet;

option go_package = "github.com/2pgcn/gameim/api/comet;comet";


enum Type {
  APP = 0;
  ROOM = 1;
  PUSH = 2;
  CLOSE = 3;
}




message MsgData{
  Type type = 1;
  string to_id = 2;
  uint64 send_id = 3;
  bytes msg = 4;
}